[gd_scene load_steps=6 format=3 uid="uid://c4u2yywoya3ts"]

[ext_resource type="Texture2D" uid="uid://djnhjuf23frn" path="res://Graphics/BG/Tartarus_BG_Bot_1x.png" id="1_2urq1"]
[ext_resource type="Script" path="res://Scenes/Levels/Circles_of_Hell/Tartarus/circle_tartarus.gd" id="1_qqlg8"]
[ext_resource type="PackedScene" uid="uid://ctrwcjfwrg2pf" path="res://Scenes/Levels/HUD/Stage_Progress_Bar/Stage_Progress_Bar.tscn" id="2_nwdda"]
[ext_resource type="PackedScene" uid="uid://dx1yec27gbobn" path="res://Scenes/Levels/Battles/Dan_Avidan_Battle/Dan_Avidan_Battle.tscn" id="4_1v1a8"]
[ext_resource type="PackedScene" uid="uid://d3davql1phdke" path="res://Scenes/Levels/HUD/Waiting_Room/waiting_room.tscn" id="5_isq3s"]

[node name="CircleTartarus" type="Control" node_paths=PackedStringArray("curr_enemy_control")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqlg8")
curr_enemy_control = NodePath("DanAvidanBattle")

[node name="TR_BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2urq1")

[node name="Stage_Progress_Bar" parent="." instance=ExtResource("2_nwdda")]
layout_mode = 1

[node name="DanAvidanBattle" parent="." instance=ExtResource("4_1v1a8")]
layout_mode = 1

[node name="Waiting_Room" parent="." instance=ExtResource("5_isq3s")]
visible = false

[connection signal="waiting_room_timer_finished" from="Waiting_Room" to="." method="_on_waiting_room_timer_finished"]
